--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "build": "bun build src/index.ts --outdir dist --target bun",
+    "start": "bun run src/index.ts",
+    "health-check": "curl -f http://localhost:3000/ || exit 1"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.3.3",
