--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
     "build": "bun build src/index.ts --outdir dist --target bun",
-    "start": "bun run src/index.ts",
+    "start": "bun run dist/index.js",
     "health-check": "curl -f http://localhost:3000/ || exit 1"
   },
   "dependencies": {
