--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.3.3",
-    "elysia": "latest"
+    "@tqman/nice-logger": "^1.1.1",
+    "cheerio": "^1.1.2",
+    "elysia": "latest",
+    "elysia-rate-limit": "^4.4.0"
   },
   "devDependencies": {
     "bun-types": "latest"
