--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@elysiajs/cors": "^1.3.3",
     "@tqman/nice-logger": "^1.1.1",
     "cheerio": "^1.1.2",
-    "elysia": "latest",
-    "elysia-rate-limit": "^4.4.0"
+    "elysia": "latest"
   },
   "devDependencies": {
     "bun-types": "latest"
