--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@elysiajs/cors": "^1.3.3",
     "@tqman/nice-logger": "^1.1.1",
     "cheerio": "^1.1.2",
+    "date-fns": "^4.1.0",
     "elysia": "latest"
   },
   "devDependencies": {
