--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.3.3",
+    "@openrouter/sdk": "^0.3.10",
     "@tqman/nice-logger": "^1.1.1",
+    "ai": "^6.0.3",
     "cheerio": "^1.1.2",
     "date-fns": "^4.1.0",
-    "elysia": "latest"
+    "dayjs": "^1.11.19",
+    "elysia": "latest",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "bun-types": "latest"
