--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@elysiajs/cors": "^1.3.3",
     "@openrouter/sdk": "^0.3.10",
+    "@tavily/core": "^0.6.4",
     "@tqman/nice-logger": "^1.1.1",
     "ai": "^6.0.3",
     "cheerio": "^1.1.2",
