--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "elysia": "latest",
+    "mongoose": "^9.1.5",
     "zod": "^4.1.13"
   },
   "devDependencies": {
