--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@elysiajs/cors": "^1.3.3",
     "@openrouter/sdk": "^0.3.10",
+    "@prisma/client": "^6.2.0",
     "@tavily/core": "^0.6.4",
     "@tqman/nice-logger": "^1.1.1",
     "ai": "^6.0.3",
@@ -19,11 +20,11 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "elysia": "latest",
-    "mongoose": "^9.1.5",
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "prisma": "^6.2.0"
   },
   "module": "src/index.js"
 }
